# test

./: .gitignore  BUGFIX_SECOND_OPEN_CLOSE.md  BUGFIX_SECOND_ROUND.md  BUGFIX_WINDOW_CRASH.md  README.md  diagnostic.py  main.py  pyproject.toml  run_diagnostic.py  test_column_selection.py  test_log_redirect.py  test_progress_bar.py  test_realtime_log.py  test_second_close.py  test_simple.py  test_window_lifecycle.py  查询分析3.spec  查询分析4.spec  查询分析5.spec
common/: __init__.py  animated.py  logger.py  style.qss  style_dark.qss  styles.py  window_utils.py
json_to_excel/: 222.json  README.md  __init__.py  cli.py  convert_222.py  core.py  json_to_excel_pyqt.py  requirements.txt  role.json  run_test_excel_to_json.py  run_test_excel_to_json_modes.py  test_sample_out.json
json_to_excel/json/: set_code.json
kjhs_test/: pld_pyqt6.py
resources/: icons.qrc
sanbao_test/: app.py  app_copy.py  constants.py  constants_copy.py  gui_utils.py
tests/: README.md  test_excel_to_json_modes.py  test_sample_out_always_array.json
ywjlb/: 01包-其他项目.py  01包-金财工程.py  02包项目.py  COMPLETION_REPORT.md  LOGGING_GUIDE.md  LOG_IMPROVEMENTS.md  LOG_QUICK_REFERENCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  START_HERE.md  __init__.py  examples.py  quickstart.py  run_app.py  run_gui.bat  run_gui.ps1  ywjlb_app.py  ywjlb_ui.py  ywjlb_unified.py
