[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docx>=0.2.4",
    "ijson>=3.4.0.post0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyinstaller>=6.16.0",
    "pyqt6>=6.10.0",
    "pyside6>=6.10.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "xlrd>=2.0.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
